# allsynth

./: CMakeLists.txt
Source/: AnalogueDrive.h  DelayLine.cpp  DelayLine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  ReverbProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
